crates/toml_edit/tests/fixtures/invalid/string-bad-surrogate.stderr
TOML parse error at line 1, column 15
  |
1 | notgood = "a\uDCFF"
  |               ^
Invalid unicode 4-digit hex code
Value is out of range
